seting responsive version

--- a/src/screens/ScreensStyles.css
+++ b/src/screens/ScreensStyles.css
@@ -17,6 +17,12 @@
   flex-direction: column;
   justify-content: center;
 }
+@media only screen and (max-width:448px ) {
+  .thirdScreen-container{
+    margin-top: 1.7em;
+    
+  }
+}
 
 .form-buttons {
   width: 100%;
