--- a/src/components/componentsStyle.css
+++ b/src/components/componentsStyle.css
@@ -43,6 +43,25 @@
   justify-content: space-evenly;
   align-items: center;
 }
+@media only screen and (max-width:448px ) {
+  .container{
+    border: none;
+    width: 100dvw;
+    height: 100%;
+  }
+ 
+  .header-score{
+    border: 2px solid blue;
+    display: flex;
+    gap: 2em;
+    justify-content: space-between;
+    
+  }
+  .subtitle{
+    width: 95dvw;
+    height: 10dvh;
+  }
+}
 
 .subtitle {
   width: 403px;
@@ -56,6 +75,7 @@
   height: 7dvh;
   width: 5dvw;
   border-radius: 100%;
+  padding: 1.5em;
   display: flex;
   flex-direction: column;
   justify-content: center;
