--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@ code {
   justify-content: center;
   align-items: center;
   height: 100dvh;
+  width: auto;
+
 }
 .Bottom-section {
   display: flex;
